--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install Tauri CLI
-        run: cargo install tauri-cli --version "^2.0"
+        run: cargo install tauri-cli --version "^2.0" --locked
 
       - name: Build Tauri app
         working-directory: src-tauri
