--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,9 +25,13 @@ pulldown-cmark = { version = "0.13", default-features = false, features = ["html
 reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 url = "2"
+dirs = "6"
 thiserror = "2"
 log = "0.4"
 env_logger = "0.11"
+
+[dev-dependencies]
+tempfile = "3"
 
 [profile.release]
 panic = "abort"
