--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,12 +29,14 @@ dirs = "6"
 thiserror = "2"
 log = "0.4"
 env_logger = "0.11"
+html2md = "0.2"
+ammonia = "4"
+encoding_rs = "0.8"
 
 [dev-dependencies]
 tempfile = "3"
 
 [profile.release]
-panic = "abort"
 codegen-units = 1
 lto = true
 opt-level = "s"
