--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bare"
-version = "0.1.1"
+version = "0.1.2"
 description = "En markdown-nettleser med fokus på personvern og enkelhet"
 authors = ["Bare Contributors"]
 license = "MIT"
@@ -22,7 +22,8 @@ tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 pulldown-cmark = { version = "0.13", default-features = false, features = ["html", "simd"] }
-reqwest = { version = "0.13", features = ["rustls-tls"], default-features = false }
+reqwest = { version = "0.13", features = ["rustls-no-provider"], default-features = false }
+rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 url = "2"
 dirs = "6"
