--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,15 +16,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: linux-x64
-            os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
           - platform: windows-x64
             os: windows-latest
             target: x86_64-pc-windows-msvc
-          - platform: macos-arm64
-            os: macos-latest
-            target: aarch64-apple-darwin
+            # - platform: macos-arm64
+            #   os: macos-latest
+            #   target: aarch64-apple-darwin
+            # - platform: linux-x64
+            #   os: ubuntu-latest
+            #   target: x86_64-unknown-linux-gnu
 
     steps:
       - name: Checkout repository
