--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  check:
-    name: Check & Lint
+  check-and-test:
+    name: Check, Lint & Test
     runs-on: ubuntu-latest
     
     steps:
@@ -48,35 +48,6 @@ jobs:
         working-directory: src-tauri
         run: cargo clippy -- -D warnings
 
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    needs: check
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache cargo
-        uses: actions/cache@v5
-        with:
-          path: |
-            ~/.cargo/registry/index
-            ~/.cargo/registry/cache
-            ~/.cargo/git/db
-            src-tauri/target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('src-tauri/Cargo.lock', 'src-tauri/Cargo.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Install Linux dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
-
       - name: Run tests
         working-directory: src-tauri
         run: cargo test --verbose
@@ -84,7 +55,7 @@ jobs:
   build-check:
     name: Build Check
     runs-on: ${{ matrix.os }}
-    needs: test
+    needs: check-and-test
     strategy:
       fail-fast: false
       matrix:
