feat: add gemtext to markdown converter and integrate Gemini input dialog
- Implemented gemtext_to_markdown function to convert Gemini text format to Markdown.
- Added GemtextResult and GeminiLink structs to handle conversion results and links.
- Created a Gemini input dialog in the UI for user input when required by Gemini servers.
- Integrated Gemini URL handling in navigation and event listeners.
- Updated styles for the Gemini input dialog to match the application theme.
- Added tests for gemtext_to_markdown function to ensure proper functionality.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,11 @@ serde_json = "1"
 pulldown-cmark = { version = "0.13", default-features = false, features = ["html", "simd"] }
 reqwest = { version = "0.13", features = ["rustls-no-provider"], default-features = false }
 rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
+tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
+sha2 = "0.10"
+hex = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 url = "2"
 dirs = "6"
 thiserror = "2"
