feat: update project license to GNU GPL v3.0 and reflect changes in documentation

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "bare"
 version = "0.1.3"
 description = "En markdown-nettleser med fokus på personvern og enkelhet"
 authors = ["Bare Contributors"]
-license = "MIT"
+license = "GPL-3.0-only"
 repository = "https://github.com/FrankBurmo/bare"
 edition = "2021"
 
